--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    width: 100%;
+    height: 100vh;
+  
+    
 }
 
 @layer utilities {
