--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,7 +14,7 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -26,7 +26,7 @@ body {
     rgb(var(--background-start-rgb));
     width: 100%;
     height: 100vh;
-  
+    overflow: scroll;
     
 }
 
@@ -34,4 +34,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+::-webkit-scrollbar{
+  display: none !important;
 }
