--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,29 @@ body {
     overflow: scroll;
     
 }
+/* body {
+  background-image: url('./asset/img/bg2.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: scroll;
+  margin: 0; 
+  padding: 20px !important;
+} */
+.blurred-gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.397);
+  backdrop-filter: blur(15px);  
+  z-index: 1;
+  pointer-events: none; 
+}
 
 @layer utilities {
   .text-balance {
